tests-integration/fixtures/checking/1779903960_overlapping_instances_synonym/Main.snap
---
source: tests-integration/src/fixtures.rs
assertion_line: 50
expression: report
---
Terms
convert ::
  forall (@a :: Type) (@b :: Type). Convert (a :: Type) (b :: Type) => (a :: Type) -> (b :: Type)
value :: String

Types
Convert :: Type -> Type -> Constraint
Bar :: Type

Synonyms
type Bar = String

Classes
class forall (a :: Type) (b :: Type). Convert (a :: Type) (b :: Type)
  convert ::
  forall (@a :: Type) (@b :: Type). Convert (a :: Type) (b :: Type) => (a :: Type) -> (b :: Type)

Instances
instance Convert String Bar
instance Convert String String

Diagnostics
error[OverlappingInstances]: Overlapping type class instances found for: Convert String String
  --> 11:1..12:16
   |
11 | instance convertSS :: Convert String String where
   | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  trivia: Convert String Bar is matching
  trivia: Convert String String is matching
